--- a/src/index.html
+++ b/src/index.html
@@ -106,8 +106,7 @@
             <a href="#" class="bns_close"></a>
             <h3>Регистрация</h3>
             <span class="bns_reg_gift">
-                Получите 500 баллов,<br>
-пройдя быструю регистрацию
+                Получите 500 баллов,<br>пройдя быструю регистрацию
             </span>
             <div class="bns_reg_step">
                 <div class="bns_reg_step_item act"></div>
@@ -256,7 +255,7 @@
         <div class="bns_overlay_iner">
             <a href="#" class="bns_close"></a>
             <div class="bns_over_info_left">
-                <img src="img/champ.png" alt="">
+                <img src="src/img/champ.png" alt="">
             </div>
             <div class="bns_over_info_right">
                 <h2>Вы чемпион!</h2>
@@ -281,19 +280,19 @@
                 Бонусная программа
             </span>
             <div class="bns_top_item">
-                <img src="img/top_ic1.png" alt="">
+                <img src="src/img/top_ic1.png" alt="">
                 <span>Получайте бонусы<br>
 за покупки в магазинах<br>
 и на сайте СпортDепо</span>
             </div>
             <div class="bns_top_item">
-                <img src="img/top_ic2.png" alt="">
+                <img src="src/img/top_ic2.png" alt="">
                 <span>Получайте<br>
 персональные<br>
 предложения</span>
             </div>
             <div class="bns_top_item">
-                <img src="img/top_ic3.png" alt="">
+                <img src="src/img/top_ic3.png" alt="">
                 <span>Тратьте бонусы<br>
 на оплату покупок:<br>
 1 бонус = 1 рубль</span>
@@ -361,7 +360,7 @@
                      data-cycle-slides="> .bns_info_slide_item"
                      data-cycle-pager=".bns_slide_pager">
                     <div class="bns_slide_pager"></div>
-                    <div class="bns_info_slide_item" style="background-image: url(img/slide1.png);">
+                    <div class="bns_info_slide_item" style="background-image: url(src/img/slide1.png);">
                         <span class="bns_info_slide_head">
                             Персональное предложение
                         </span>
@@ -372,7 +371,7 @@
                         </span>
                         <a href="#" class="bns_info_slide_linck">Подробнее</a>
                     </div>
-                    <div class="bns_info_slide_item" style="background-image: url(img/slide1.png);">
+                    <div class="bns_info_slide_item" style="background-image: url(src/img/slide1.png);">
                         <span class="bns_info_slide_head">
                             Персональное предложение 2
                         </span>
@@ -389,7 +388,7 @@
             <div class="bns_info_right">
                 <div class="bns_info_mount">
                     <div class="bns_info_mount_item ">
-                        <img src="img/m_ic5.png" alt="">
+                        <img src="src/img/m_ic5.png" alt="">
                         <div class="bns_info_mount_item_info">
                             <span class="bns_info_mount_item_name">Легенда</span>
                             <span class="bns_info_mount_item_text">Вы — лидер!</span>
@@ -397,7 +396,7 @@
                         </div>
                     </div>
                     <div class="bns_info_mount_item act">
-                        <img src="img/m_ic4.png" alt="">
+                        <img src="src/img/m_ic4.png" alt="">
                         <div class="bns_info_mount_item_info">
                             <span class="bns_info_mount_item_name">Чемпион</span>
                             <span class="bns_info_mount_item_text">Осталось немного</span>
@@ -405,7 +404,7 @@
                         </div>
                     </div>
                     <div class="bns_info_mount_item ">
-                        <img src="img/m_ic3.png" alt="">
+                        <img src="src/img/m_ic3.png" alt="">
                         <div class="bns_info_mount_item_info">
                             <span class="bns_info_mount_item_name">Вице-чемпион</span>
                             <span class="bns_info_mount_item_text">Вас не остановить</span>
@@ -413,7 +412,7 @@
                         </div>
                     </div>
                     <div class="bns_info_mount_item ">
-                        <img src="img/m_ic2.png" alt="">
+                        <img src="src/img/m_ic2.png" alt="">
                         <div class="bns_info_mount_item_info">
                             <span class="bns_info_mount_item_name">Легенда</span>
                             <span class="bns_info_mount_item_text">Вы — лидер!</span>
@@ -421,7 +420,7 @@
                         </div>
                     </div>
                     <div class="bns_info_mount_item ">
-                        <img src="img/m_ic1.png" alt="">
+                        <img src="src/img/m_ic1.png" alt="">
                         <div class="bns_info_mount_item_info">
                             <span class="bns_info_mount_item_name">Участник</span>
                             <span class="bns_info_mount_item_text">Добро пожаловать</span>
@@ -612,7 +611,7 @@
             <div class="bns_tab bns_tab_gift" id="tab_gift" style="display: none">
                 <div class="bns_gift_item">
                     <div class="bns_gift_item_img">
-                        <img src="img/gift1.png" alt="">
+                        <img src="src/img/gift1.png" alt="">
                     </div>
                     <span class="bns_gift_item_name">
                         Рюкзак-мешок
@@ -629,7 +628,7 @@
                 </div>
                 <div class="bns_gift_item">
                     <div class="bns_gift_item_img">
-                        <img src="img/gift2.png" alt="">
+                        <img src="src/img/gift2.png" alt="">
                     </div>
                     <span class="bns_gift_item_name">
                         Бутылка Nike
@@ -646,7 +645,7 @@
                 </div>
                 <div class="bns_gift_item">
                     <div class="bns_gift_item_img">
-                        <img src="img/gift3.png" alt="">
+                        <img src="src/img/gift3.png" alt="">
                     </div>
                     <span class="bns_gift_item_name">
                         Рюкзак-мешок
@@ -663,7 +662,7 @@
                 </div>
                 <div class="bns_gift_item">
                     <div class="bns_gift_item_img">
-                        <img src="img/gift4.png" alt="">
+                        <img src="src/img/gift4.png" alt="">
                     </div>
                     <span class="bns_gift_item_name">
                         Перчатки тренировочные
@@ -681,23 +680,23 @@
             </div>
             <div class="bns_tab bns_tab_achiv" id="tab_achiv" style="display: none">
                 <a href="#" class="bns_achiv_item act">
-                    <img src="img/ach1.png" alt="">
+                    <img src="src/img/ach1.png" alt="">
                     <span>Зритель</span>
                 </a>
                 <a href="#" class="bns_achiv_item act">
-                    <img src="img/ach2.png" alt="">
+                    <img src="src/img/ach2.png" alt="">
                     <span>Болельщик</span>
                 </a>
                 <a href="#" class="bns_achiv_item act">
-                    <img src="img/ach3.png" alt="">
+                    <img src="src/img/ach3.png" alt="">
                     <span>Фоторепортёр</span>
                 </a>
                 <a href="#" class="bns_achiv_item">
-                    <img src="img/ach4.png" alt="">
+                    <img src="src/img/ach4.png" alt="">
                     <span>Обозреватель</span>
                 </a>
                 <a href="#" class="bns_achiv_item">
-                    <img src="img/ach5.png" alt="">
+                    <img src="src/img/ach5.png" alt="">
                     <span>Эксперт</span>
                 </a>
             </div>
