--- a/src/text.html
+++ b/src/text.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <title></title>
@@ -15,6 +16,7 @@
     <script src="js/jquery.gray.js"></script>
     <script src="js/main.js"></script>
 </head>
+
 <body>
 
 
@@ -27,145 +29,137 @@
             <div class="bns_top_item">
                 <img src="img/top_ic1.png" alt="">
                 <span>Получайте бонусы<br>
-за покупки в магазинах<br>
-и на сайте СпортDепо</span>
+                        за покупки в магазинах<br>
+                        и на сайте СпортDепо</span>
             </div>
             <div class="bns_top_item">
                 <img src="img/top_ic2.png" alt="">
                 <span>Получайте<br>
-персональные<br>
-предложения</span>
+                    персональные<br>
+                    предложения</span>
             </div>
             <div class="bns_top_item">
                 <img src="img/top_ic3.png" alt="">
                 <span>Тратьте бонусы<br>
-на оплату покупок:<br>
-1 бонус = 1 рубль</span>
+                    на оплату покупок:<br>
+                    1 бонус = 1 рубль</span>
             </div>
         </div>
 
-       <div class="bns_text_block">
-           <h2>Клубная программа</h2>
-           <p>
-               Клубная программа СПОРДЕПО – это накопительная бонусная программа, позволяющая ее участникам совершать выгодные покупки в магазинах и на сайте www.sportdepo.ru и пользоваться дополнительными сервисами и привилегиями.
-                <br><br>
-               Чтобы стать участником Клубной программы СПОРДЕПО, необходимо совершить покупку и заполнить
-               анкету в любом магазине розничной сети или пройти регистрацию на сайте.
-           </p>
-           <hr>
-           <h2>Преимущества участника</h2>
-           <ul>
-               <li>значительная выгода при покупке товаров</li>
-               <li>полезные информационные сервисы</li>
-               <li>подарки на день рождения</li>
-               <li>дополнительные привилегии в обслуживании</li>
-               <li>выгодные условия по сервису и ремонту инвентаря</li>
-           </ul>
-           <hr>
-           <h2>Описание преимуществ программы</h2>
-           <p>
-                После регистрации Вы сможете копить и тратить бонусы, получать скидки на сервис и другие привилегии, используя Ваш номер мобильного телефона. При желании Вы сможете бесплатно получить в магазине пластиковую Клубную Карту.
+        <div class="bns_text_block">
+            <h2>Клубная программа</h2>
+            <p>
+                Клубная программа СПОРДЕПО – это накопительная бонусная программа, позволяющая ее участникам совершать выгодные покупки в
+                магазинах и на сайте www.sportdepo.ru и пользоваться дополнительными сервисами и привилегиями.
+                <br><br> Чтобы стать участником Клубной программы СПОРДЕПО, необходимо совершить покупку и заполнить анкету
+                в любом магазине розничной сети или пройти регистрацию на сайте.
+            </p>
+            <hr>
+            <h2>Преимущества участника</h2>
+            <ul>
+                <li>значительная выгода при покупке товаров</li>
+                <li>полезные информационные сервисы</li>
+                <li>подарки на день рождения</li>
+                <li>дополнительные привилегии в обслуживании</li>
+                <li>выгодные условия по сервису и ремонту инвентаря</li>
+            </ul>
+            <hr>
+            <h2>Описание преимуществ программы</h2>
+            <p>
+                После регистрации Вы сможете копить и тратить бонусы, получать скидки на сервис и другие привилегии, используя Ваш номер
+                мобильного телефона. При желании Вы сможете бесплатно получить в магазине пластиковую Клубную Карту.
                 <br>
+                <br> Получайте баллы
+                <br> Получайте 1 балл за каждые 20 руб. во всех магазинах СПОРТДЕПО и на сайте www.sportdepo.ru
                 <br>
-                Получайте баллы
-                <br>
-                Получайте 1 балл за каждые 20 руб. во всех магазинах СПОРТДЕПО и на сайте www.sportdepo.ru
-                <br>
-                <br>
-                Получайте привилегии
+                <br> Получайте привилегии
 
-               <br><br>
+                <br><br>
                 <ul>
                     <li>Приветственные бонусы – за регистрацию клубной карты мы подарим Вам 500 бонусов!</li>
                     <li>Получайте баллы в подарок на Ваш день рождения</li>
                     <li>Участвуйте в акциях – получайте больше баллов</li>
                     <li>Покупайте больше и переходите на новый уровень</li>
                 </ul>
-                 <p><br>Выгода при покупке
-                     <br>
-                     Оплачивайте бонусами до 20% стоимости Ваших покупок. 1 бонус = 1 рубль
-                     <br>
-                     Дополнительная выгода
-                     <br>
-                     Сотни товаров по сниженным ценам</p>
+                <p><br>Выгода при покупке
+                    <br> Оплачивайте бонусами до 20% стоимости Ваших покупок. 1 бонус = 1 рубль
+                    <br> Дополнительная выгода
+                    <br> Сотни товаров по сниженным ценам</p>
 
-           </p>
-           <hr>
-           <h2>Где получить карту</h2>
-           <p>Карту можно получить бесплатно во всех магазинах СПОРТДЕПО</p>
-           <hr>
-           <h2>Бонусы на День Рождения</h2>
-           <p>
-               Зарегистрируйтесь в Клубной программе сегодня и получите:
-               <br><br>
-           </p>
-               <ul>
+            </p>
+            <hr>
+            <h2>Где получить карту</h2>
+            <p>Карту можно получить бесплатно во всех магазинах СПОРТДЕПО</p>
+            <hr>
+            <h2>Бонусы на День Рождения</h2>
+            <p>
+                Зарегистрируйтесь в Клубной программе сегодня и получите:
+                <br><br>
+            </p>
+            <ul>
                 <li>700 бонусов(1 бонус=1рубль) = 500 приветственных бонусов за регистрацию и</li>
                 <li>200 бонусов за подписку на e-mail</li>
-               </ul>
+            </ul>
 
-           <p>
-               <br>
-                Укажите дату своего рождения и мы подарим Вам на день рождения
-           </p>
-           <div class="bns_cake_block">
-               <div class="bns_cake_item">
-                   <div class="bns_cake_item_img">
-                       <img src="img/tort1.png" alt="">
-                   </div>
-                   <span class="bns_cake_bal">
+            <p>
+                <br> Укажите дату своего рождения и мы подарим Вам на день рождения
+            </p>
+            <div class="bns_cake_block">
+                <div class="bns_cake_item">
+                    <div class="bns_cake_item_img">
+                        <img src="img/tort1.png" alt="">
+                    </div>
+                    <span class="bns_cake_bal">
                        <span class="bns_cake_bal_num">
                         500
                        </span>
-                       <span class="bns_cake_bal_text">
+                    <span class="bns_cake_bal_text">
                         бонусов
                        </span>
+                    </span>
+                    <span class="bns_cake_name">
+                       участнику любительского<br>уровня
                    </span>
-                   <span class="bns_cake_name">
-                       участнику любительского<br>
-уровня
-                   </span>
-               </div>
-               <div class="bns_cake_item">
-                   <div class="bns_cake_item_img">
-                       <img src="img/tort2.png" alt="">
-                   </div>
-                   <span class="bns_cake_bal">
+                </div>
+                <div class="bns_cake_item">
+                    <div class="bns_cake_item_img">
+                        <img src="img/tort2.png" alt="">
+                    </div>
+                    <span class="bns_cake_bal">
                        <span class="bns_cake_bal_num">
                         1000
                        </span>
-                       <span class="bns_cake_bal_text">
+                    <span class="bns_cake_bal_text">
                         бонусов
                        </span>
+                    </span>
+                    <span class="bns_cake_name">
+                       обладателю<br>полупрофессиональной карты
                    </span>
-                   <span class="bns_cake_name">
-                       обладателю<br>
-полупрофессиональной карты
-                   </span>
-               </div>
-               <div class="bns_cake_item">
-                   <div class="bns_cake_item_img">
-                       <img src="img/tort3.png" alt="">
-                   </div>
-                   <span class="bns_cake_bal">
+                </div>
+                <div class="bns_cake_item">
+                    <div class="bns_cake_item_img">
+                        <img src="img/tort3.png" alt="">
+                    </div>
+                    <span class="bns_cake_bal">
                        <span class="bns_cake_bal_num">
                         2000
                        </span>
-                       <span class="bns_cake_bal_text">
+                    <span class="bns_cake_bal_text">
                         бонусов
                        </span>
+                    </span>
+                    <span class="bns_cake_name">
+                       обладателю<br>PRO-карты
                    </span>
-                   <span class="bns_cake_name">
-                       обладателю<br>
-PRO-карты
-                   </span>
-               </div>
-           </div>
-       </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="js/jquery-3.1.0.js"></script>
     <script src="js/jquery.nicescroll.js"></script>
     <script src="js/main.js"></script>
 </body>
+
 </html>
