--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Example</title>
-    <script src="dist/sailplay.js"></script>
+    <script src="index.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             var element = document.getElementById('sailplayLoyaltyPage');
